--- a/.jshintrc
+++ b/.jshintrc
@@ -2,5 +2,6 @@
 	"esnext": "true",
 	"node": "true",
 	"jquery": "true",
-	"browser": "true"
+	"browser": "true",
+	"predef": [ "moment", "Spinner" ]
 }
